# Cheetah-Software

./: .gitignore  CMakeLists.txt
config/: default-user-parameters-file.yaml  mhpc-user-parameters.yaml  mini-cheetah-defaults.yaml  simulator-defaults.yaml
user/MHPC_Controller/: CMakeLists.txt  K_HSDDP.txt  MHPCUserParameters.h  MHPC_Controller.cpp  MHPC_Controller.hpp  MHPC_cpptypes.h  pos_des_HSDDP.txt  qddes_HSDDP.txt  qdes_HSDDP.txt  torque_HSDDP.txt  vel_des_HSDDP.txt
user/MHPC_Controller/CasadiGen/: CMakeLists.txt
user/MHPC_Controller/CasadiGen/header/: CasadiGen.h  Jacob_F.h
user/MHPC_Controller/CasadiGen/source/: CasadiGen.cpp  Dyn_BS.c  Dyn_BS_par.c  Dyn_FL.c  Dyn_FL_par.c  Dyn_FS.c  Dyn_FS_par.c  FBDynamics.c  FBDynamics_par.c  Imp_B.c  Imp_B_par.c  Imp_F.c  Imp_F_par.c  Jacob_B.c  Jacob_F.c  Link0Jacobian.c  Link1Jacobian.c  Link2Jacobian.c  Link3Jacobian.c  Link4Jacobian.c  WB_FL1_terminal_constr.c  WB_FL2_terminal_constr.c
user/MHPC_Controller/Common/header/: Gait.h  MHPC_CPPTypes.h  MHPC_CompoundTypes.h
user/MHPC_Controller/Controller/Heuristics/: boundingPDControl.cpp
user/MHPC_Controller/Controller/MHPCLocomotion/: MHPCConstraints.cpp  MHPCConstraints.h  MHPCCost.cpp  MHPCCost.h  MHPCLocomotion.cpp  MHPCLocomotion.h
user/MHPC_Controller/Dynamics/header/: FootholdPlan.h  PlanarFloatingBase.h  PlanarQuadruped.h  PlanarRobot.h
user/MHPC_Controller/Dynamics/source/: PlanarFloatingBase.cpp  PlanarQuadruped.cpp
user/MHPC_Controller/FSM_States/: readme.md
user/MHPC_Controller/FSM_States/header/: ControlFSM.h  ControlFSMData.h  FSM_State.h  FSM_State_Locomotion.h  FSM_State_Passive.h  FSM_State_Prebounding.h  FSM_State_StandUp.h
user/MHPC_Controller/FSM_States/source/: ControlFSM.cpp  FSM_State.cpp  FSM_State_Locomotion.cpp  FSM_State_Passive.cpp  FSM_State_Prebounding.cpp  FSM_State_StandUp.cpp  SafetyChecker.cpp
user/MHPC_Controller/HSDDPSolver/: CMakeLists.txt
user/MHPC_Controller/HSDDPSolver/header/: ConstraintsBase.h  CostBase.h  MultiPhaseDDP.h  SinglePhase.h  SinglePhaseAbstract.h
user/MHPC_Controller/HSDDPSolver/source/: CostBase.cpp  MultiPhaseDDP.cpp  ReferenceGen.cpp  SinglePhase.cpp  SinglePhaseAbstract.cpp
user/MHPC_Controller/MHPC_MATALB_data/MHPC_Start_with_two_legs/: K_HSDDP.txt  pos_des_HSDDP.txt  qddes_HSDDP.txt  qdes_HSDDP.txt  torque_HSDDP.txt  vel_des_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/MHPC_start_with_four_legs/: K_HSDDP.txt  pos_des_HSDDP.txt  qddes_HSDDP.txt  qdes_HSDDP.txt  torque_HSDDP.txt  vel_des_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/MPC_start_with_two_legs/: K_HSDDP.txt  pos_des_HSDDP.txt  qddes_HSDDP.txt  qdes_HSDDP.txt  torque_HSDDP.txt  vel_des_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.0/CloseGap/MHPC44/: K_HSDDP.txt  pos_des_HSDDP.txt  torque_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Bounding/DataForInitialSubmission/: K_HSDDP.txt  pos_des_HSDDP.txt  torque_HSDDP.txt  vel_des_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Bounding/MHPC44/: K_HSDDP.txt  torque_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Bounding/MHPC44_2/: K_HSDDP.txt  pos_des_HSDDP.txt  torque_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.0-0.4/MHPC44/: pos_des_HSDDP.txt  qddes_HSDDP.txt  qdes_HSDDP.txt  vel_des_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.4-0.3/MHPC44/: qdes_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.4-0.3/MHPC44_lowFrictionCoefficient/: K_HSDDP.txt  qdes_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.4-3.0/MHPC40/: qdes_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.4-3.0/MHPC44_lowFrictionCoefficient/: vel_des_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.4-3.0/MHPC60/: qddes_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.7-4.0/MHPC44/: pos_des_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.7-4.0/MHPC44_lowFrictionCoefficient/: qddes_HSDDP.txt
user/MHPC_Controller/MHPC_MATALB_data/Speed1.5/Gap1.7-4.0/MHPC60/: torque_HSDDP.txt
user/MHPC_Controller/PreComputeData/: qdes_HSDDP.txt
user/MHPC_Controller/Utils/: MHPCUtils.cpp  MHPCUtils.h
user/MHPC_Controller/test/: CMakeLists.txt  casadigen_test.cpp  test_main.cpp
(+39 files in other folders)
